fix a few findbugs errors.